--- a/01b-avito-downloader-land.ipynb
+++ b/01b-avito-downloader-land.ipynb
@@ -116,40 +116,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2022-09-22 09:55:57 | DownloaderSeleniumFirefox: downloader init\n",
-      "[INFO    ] 2022-09-22 09:55:57 | DownloaderSeleniumFirefox: open virtual browser\n",
-      "[INFO    ] 2022-09-22 09:55:59 | AdsListParser: downloader init\n",
-      "[INFO    ] 2022-09-22 09:55:59 | AvitoParser: init\n",
-      "[INFO    ] 2022-09-22 09:56:05 | AvitoParser: 23 pages for read\n",
-      "[INFO    ] 2022-09-22 09:56:05 | AdsListParser: start read and parse pages...\n",
-      "[INFO    ] 2022-09-22 09:56:09 | AdsListParser: read page 1\n",
-      "[INFO    ] 2022-09-22 09:56:12 | AdsListParser: read page 2\n",
-      "[INFO    ] 2022-09-22 09:56:15 | AdsListParser: read page 3\n",
-      "[INFO    ] 2022-09-22 09:56:17 | AdsListParser: read page 4\n",
-      "[INFO    ] 2022-09-22 09:56:21 | AdsListParser: read page 5\n",
-      "[INFO    ] 2022-09-22 09:56:23 | AdsListParser: read page 6\n",
-      "[INFO    ] 2022-09-22 09:56:26 | AdsListParser: read page 7\n",
-      "[INFO    ] 2022-09-22 09:56:29 | AdsListParser: read page 8\n",
-      "[INFO    ] 2022-09-22 09:56:34 | AdsListParser: read page 9\n",
-      "[INFO    ] 2022-09-22 09:56:39 | AdsListParser: read page 10\n",
-      "[INFO    ] 2022-09-22 09:56:42 | AdsListParser: read page 11\n",
-      "[INFO    ] 2022-09-22 09:56:45 | AdsListParser: read page 12\n",
-      "[INFO    ] 2022-09-22 09:56:47 | AdsListParser: read page 13\n",
-      "[INFO    ] 2022-09-22 09:56:50 | AdsListParser: read page 14\n",
-      "[INFO    ] 2022-09-22 09:56:53 | AdsListParser: read page 15\n",
-      "[INFO    ] 2022-09-22 09:56:56 | AdsListParser: read page 16\n",
-      "[INFO    ] 2022-09-22 09:56:59 | AdsListParser: read page 17\n",
-      "[INFO    ] 2022-09-22 09:57:02 | AdsListParser: read page 18\n",
-      "[INFO    ] 2022-09-22 09:57:05 | AdsListParser: read page 19\n",
-      "[INFO    ] 2022-09-22 09:57:08 | AdsListParser: read page 20\n",
-      "[INFO    ] 2022-09-22 09:57:10 | AdsListParser: read page 21\n",
-      "[INFO    ] 2022-09-22 09:57:13 | AdsListParser: read page 22\n",
-      "[INFO    ] 2022-09-22 09:57:15 | AdsListParser: read page 23\n",
-      "[INFO    ] 2022-09-22 09:57:15 | AdsListParser: last page detected\n",
-      "[INFO    ] 2022-09-22 09:57:16 | DownloaderSeleniumFirefox: close virtual browser\n",
-      "1109\n",
-      "CPU times: user 4.56 s, sys: 143 ms, total: 4.7 s\n",
-      "Wall time: 1min 18s\n"
+      "[INFO    ] 2022-09-26 11:20:54 | DownloaderSeleniumFirefox: downloader init\n",
+      "[INFO    ] 2022-09-26 11:20:54 | DownloaderSeleniumFirefox: open virtual browser\n",
+      "[INFO    ] 2022-09-26 11:20:55 | AdsListParser: downloader init\n",
+      "[INFO    ] 2022-09-26 11:20:55 | AvitoParser: init\n",
+      "[INFO    ] 2022-09-26 11:21:02 | AvitoParser: 22 pages for read\n",
+      "[INFO    ] 2022-09-26 11:21:02 | AdsListParser: start read and parse pages...\n",
+      "[INFO    ] 2022-09-26 11:21:05 | AdsListParser: read page 1\n",
+      "[INFO    ] 2022-09-26 11:21:08 | AdsListParser: read page 2\n",
+      "[INFO    ] 2022-09-26 11:21:13 | AdsListParser: read page 3\n",
+      "[INFO    ] 2022-09-26 11:21:17 | AdsListParser: read page 4\n",
+      "[INFO    ] 2022-09-26 11:21:20 | AdsListParser: read page 5\n",
+      "[INFO    ] 2022-09-26 11:21:24 | AdsListParser: read page 6\n",
+      "[INFO    ] 2022-09-26 11:21:28 | AdsListParser: read page 7\n",
+      "[INFO    ] 2022-09-26 11:21:31 | AdsListParser: read page 8\n",
+      "[INFO    ] 2022-09-26 11:21:34 | AdsListParser: read page 9\n",
+      "[INFO    ] 2022-09-26 11:21:38 | AdsListParser: read page 10\n",
+      "[INFO    ] 2022-09-26 11:21:41 | AdsListParser: read page 11\n",
+      "[INFO    ] 2022-09-26 11:21:46 | AdsListParser: read page 12\n",
+      "[INFO    ] 2022-09-26 11:21:50 | AdsListParser: read page 13\n",
+      "[INFO    ] 2022-09-26 11:21:53 | AdsListParser: read page 14\n",
+      "[INFO    ] 2022-09-26 11:21:56 | AdsListParser: read page 15\n",
+      "[INFO    ] 2022-09-26 11:22:00 | AdsListParser: read page 16\n",
+      "[INFO    ] 2022-09-26 11:22:04 | AdsListParser: read page 17\n",
+      "[INFO    ] 2022-09-26 11:22:07 | AdsListParser: read page 18\n",
+      "[INFO    ] 2022-09-26 11:22:11 | AdsListParser: read page 19\n",
+      "[INFO    ] 2022-09-26 11:22:14 | AdsListParser: read page 20\n",
+      "[INFO    ] 2022-09-26 11:22:20 | AdsListParser: read page 21\n",
+      "[INFO    ] 2022-09-26 11:22:23 | AdsListParser: read page 22\n",
+      "[INFO    ] 2022-09-26 11:22:23 | AdsListParser: last page detected\n",
+      "[INFO    ] 2022-09-26 11:22:24 | DownloaderSeleniumFirefox: close virtual browser\n",
+      "1087\n",
+      "CPU times: user 4.31 s, sys: 285 ms, total: 4.59 s\n",
+      "Wall time: 1min 30s\n"
      ]
     }
    ],
@@ -177,8 +176,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1109\n",
-      "1109\n"
+      "1087\n",
+      "1087\n"
      ]
     }
    ],
@@ -250,27 +249,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>998</th>\n",
-       "      <td>2534051202</td>\n",
-       "      <td>Объявление «Участок 6,2 сот. (ИЖС)» с фотографией</td>\n",
-       "      <td>9505000</td>\n",
+       "      <th>724</th>\n",
+       "      <td>829826014</td>\n",
+       "      <td>Объявление «Участок 5,5 сот. (ИЖС)» 7 фотографий</td>\n",
+       "      <td>2600000</td>\n",
        "      <td></td>\n",
-       "      <td>Гагаринский муниципальный округ, микрорайон Казачья Бухта, Рубежная ул., 109</td>\n",
-       "      <td>Продается.\\nВидовой земельный участок 6,18 соток в коттеджном поселке СТ «Пилот» на берегу Казачьей бухты. Коммуникации: электричество, городской водопровод, центральная канализация, газ — на границе участка. Участок находится в районе с развитой инфраструк</td>\n",
-       "      <td>20</td>\n",
-       "      <td>2022-09-22 09:57:15.622658</td>\n",
+       "      <td>пос. городского типа Кача, квартал Кача-Маяк</td>\n",
+       "      <td>Ровный, пустой участок ( на 6 фото), полностью оформлен в соответствии с Законодательством РФ(кадастровый паспорт, право на собственность и т. Д.). Площадь — 5,49 сотки (549 кв. М.), коммуникации свет, вода ( все коммуникации подведены к участку), вокруг у</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2022-09-26 11:22:23.723973</td>\n",
        "      <td>sevastopol</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>403</th>\n",
-       "      <td>2532638024</td>\n",
-       "      <td>Объявление «Участок 4,4 сот. (ИЖС)» 4 фотографии</td>\n",
-       "      <td>4500000</td>\n",
+       "      <th>1086</th>\n",
+       "      <td>850416055</td>\n",
+       "      <td>Объявление «Участок 1 сот. (ИЖС)» 4 фотографии</td>\n",
+       "      <td>1150000</td>\n",
        "      <td></td>\n",
-       "      <td>балка Карантинная</td>\n",
-       "      <td>Кадастровый номер: \\n91:03:003001:1745.\\nУчасток на первой линии, центральная асфальтированная дорога, рядом остановки, место для парковки, магазин сантехники, автомойка. Есть разрешение на подключение в гор воде, разрешение на подключения эл-ва в процессе.</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2022-09-22 09:57:15.622658</td>\n",
+       "      <td>пос. городского типа Кача</td>\n",
+       "      <td>Продаю свой участок (Ижс) Крым. Севастополь. Пгт. Можно 4 сотки.</td>\n",
+       "      <td>22</td>\n",
+       "      <td>2022-09-26 11:22:23.723973</td>\n",
        "      <td>sevastopol</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -278,25 +277,21 @@
        "</div>"
       ],
       "text/plain": [
-       "       avito_id                                              title    price  \\\n",
-       "998  2534051202  Объявление «Участок 6,2 сот. (ИЖС)» с фотографией  9505000   \n",
-       "403  2532638024   Объявление «Участок 4,4 сот. (ИЖС)» 4 фотографии  4500000   \n",
+       "       avito_id                                             title    price  \\\n",
+       "724   829826014  Объявление «Участок 5,5 сот. (ИЖС)» 7 фотографий  2600000   \n",
+       "1086  850416055    Объявление «Участок 1 сот. (ИЖС)» 4 фотографии  1150000   \n",
        "\n",
-       "    obj_name  \\\n",
-       "998            \n",
-       "403            \n",
+       "     obj_name                                           adr  \\\n",
+       "724            пос. городского типа Кача, квартал Кача-Маяк   \n",
+       "1086                              пос. городского типа Кача   \n",
        "\n",
-       "                                                                              adr  \\\n",
-       "998  Гагаринский муниципальный округ, микрорайон Казачья Бухта, Рубежная ул., 109   \n",
-       "403                                                             балка Карантинная   \n",
+       "                                                                                                                                                                                                                                                           description  \\\n",
+       "724   Ровный, пустой участок ( на 6 фото), полностью оформлен в соответствии с Законодательством РФ(кадастровый паспорт, право на собственность и т. Д.). Площадь — 5,49 сотки (549 кв. М.), коммуникации свет, вода ( все коммуникации подведены к участку), вокруг у   \n",
+       "1086                                                                                                                                                                                                  Продаю свой участок (Ижс) Крым. Севастополь. Пгт. Можно 4 сотки.   \n",
        "\n",
-       "                                                                                                                                                                                                                                                            description  \\\n",
-       "998   Продается.\\nВидовой земельный участок 6,18 соток в коттеджном поселке СТ «Пилот» на берегу Казачьей бухты. Коммуникации: электричество, городской водопровод, центральная канализация, газ — на границе участка. Участок находится в районе с развитой инфраструк   \n",
-       "403  Кадастровый номер: \\n91:03:003001:1745.\\nУчасток на первой линии, центральная асфальтированная дорога, рядом остановки, место для парковки, магазин сантехники, автомойка. Есть разрешение на подключение в гор воде, разрешение на подключения эл-ва в процессе.    \n",
-       "\n",
-       "     page                         ts       place  \n",
-       "998    20 2022-09-22 09:57:15.622658  sevastopol  \n",
-       "403     9 2022-09-22 09:57:15.622658  sevastopol  "
+       "      page                         ts       place  \n",
+       "724     15 2022-09-26 11:22:23.723973  sevastopol  \n",
+       "1086    22 2022-09-26 11:22:23.723973  sevastopol  "
       ]
      },
      "execution_count": 10,
