--- a/01a-avito-downloader-flat.ipynb
+++ b/01a-avito-downloader-flat.ipynb
@@ -116,95 +116,93 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2022-09-22 09:43:28 | DownloaderSeleniumFirefox: downloader init\n",
-      "[INFO    ] 2022-09-22 09:43:28 | DownloaderSeleniumFirefox: open virtual browser\n",
-      "[INFO    ] 2022-09-22 09:43:31 | AdsListParser: downloader init\n",
-      "[INFO    ] 2022-09-22 09:43:31 | AvitoParser: init\n",
-      "[INFO    ] 2022-09-22 09:43:37 | AvitoParser: 78 pages for read\n",
-      "[INFO    ] 2022-09-22 09:43:37 | AdsListParser: start read and parse pages...\n",
-      "[INFO    ] 2022-09-22 09:43:41 | AdsListParser: read page 1\n",
-      "[INFO    ] 2022-09-22 09:43:44 | AdsListParser: read page 2\n",
-      "[INFO    ] 2022-09-22 09:43:48 | AdsListParser: read page 3\n",
-      "[INFO    ] 2022-09-22 09:43:51 | AdsListParser: read page 4\n",
-      "[INFO    ] 2022-09-22 09:43:55 | AdsListParser: read page 5\n",
-      "[INFO    ] 2022-09-22 09:44:00 | AdsListParser: read page 6\n",
-      "[INFO    ] 2022-09-22 09:44:04 | AdsListParser: read page 7\n",
-      "[INFO    ] 2022-09-22 09:44:09 | AdsListParser: read page 8\n",
-      "[INFO    ] 2022-09-22 09:44:14 | AdsListParser: read page 9\n",
-      "[INFO    ] 2022-09-22 09:44:18 | AdsListParser: read page 10\n",
-      "[INFO    ] 2022-09-22 09:44:21 | AdsListParser: read page 11\n",
-      "[INFO    ] 2022-09-22 09:44:24 | AdsListParser: read page 12\n",
-      "[INFO    ] 2022-09-22 09:44:27 | AdsListParser: read page 13\n",
-      "[INFO    ] 2022-09-22 09:44:31 | AdsListParser: read page 14\n",
-      "[INFO    ] 2022-09-22 09:44:34 | AdsListParser: read page 15\n",
-      "[INFO    ] 2022-09-22 09:44:38 | AdsListParser: read page 16\n",
-      "[INFO    ] 2022-09-22 09:44:42 | AdsListParser: read page 17\n",
-      "[INFO    ] 2022-09-22 09:44:47 | AdsListParser: read page 18\n",
-      "[INFO    ] 2022-09-22 09:44:50 | AdsListParser: read page 19\n",
-      "[INFO    ] 2022-09-22 09:44:59 | AdsListParser: read page 20\n",
-      "[INFO    ] 2022-09-22 09:45:03 | AdsListParser: read page 21\n",
-      "[INFO    ] 2022-09-22 09:45:06 | AdsListParser: read page 22\n",
-      "[INFO    ] 2022-09-22 09:45:11 | AdsListParser: read page 23\n",
-      "[INFO    ] 2022-09-22 09:45:15 | AdsListParser: read page 24\n",
-      "[INFO    ] 2022-09-22 09:45:19 | AdsListParser: read page 25\n",
-      "[INFO    ] 2022-09-22 09:45:22 | AdsListParser: read page 26\n",
-      "[INFO    ] 2022-09-22 09:45:26 | AdsListParser: read page 27\n",
-      "[INFO    ] 2022-09-22 09:45:29 | AdsListParser: read page 28\n",
-      "[INFO    ] 2022-09-22 09:45:33 | AdsListParser: read page 29\n",
-      "[INFO    ] 2022-09-22 09:45:36 | AdsListParser: read page 30\n",
-      "[INFO    ] 2022-09-22 09:45:39 | AdsListParser: read page 31\n",
-      "[INFO    ] 2022-09-22 09:45:43 | AdsListParser: read page 32\n",
-      "[INFO    ] 2022-09-22 09:45:48 | AdsListParser: read page 33\n",
-      "[INFO    ] 2022-09-22 09:45:51 | AdsListParser: read page 34\n",
-      "[INFO    ] 2022-09-22 09:45:54 | AdsListParser: read page 35\n",
-      "[INFO    ] 2022-09-22 09:45:57 | AdsListParser: read page 36\n",
-      "[INFO    ] 2022-09-22 09:46:00 | AdsListParser: read page 37\n",
-      "[INFO    ] 2022-09-22 09:46:03 | AdsListParser: read page 38\n",
-      "[INFO    ] 2022-09-22 09:46:07 | AdsListParser: read page 39\n",
-      "[INFO    ] 2022-09-22 09:46:10 | AdsListParser: read page 40\n",
-      "[INFO    ] 2022-09-22 09:46:13 | AdsListParser: read page 41\n",
-      "[INFO    ] 2022-09-22 09:46:16 | AdsListParser: read page 42\n",
-      "[INFO    ] 2022-09-22 09:46:19 | AdsListParser: read page 43\n",
-      "[INFO    ] 2022-09-22 09:46:24 | AdsListParser: read page 44\n",
-      "[INFO    ] 2022-09-22 09:46:29 | AdsListParser: read page 45\n",
-      "[INFO    ] 2022-09-22 09:46:33 | AdsListParser: read page 46\n",
-      "[INFO    ] 2022-09-22 09:46:37 | AdsListParser: read page 47\n",
-      "[INFO    ] 2022-09-22 09:46:40 | AdsListParser: read page 48\n",
-      "[INFO    ] 2022-09-22 09:46:43 | AdsListParser: read page 49\n",
-      "[INFO    ] 2022-09-22 09:46:47 | AdsListParser: read page 50\n",
-      "[INFO    ] 2022-09-22 09:46:54 | AdsListParser: read page 51\n",
-      "[INFO    ] 2022-09-22 09:46:59 | AdsListParser: read page 52\n",
-      "[INFO    ] 2022-09-22 09:47:03 | AdsListParser: read page 53\n",
-      "[INFO    ] 2022-09-22 09:47:07 | AdsListParser: read page 54\n",
-      "[INFO    ] 2022-09-22 09:47:13 | AdsListParser: read page 55\n",
-      "[INFO    ] 2022-09-22 09:47:17 | AdsListParser: read page 56\n",
-      "[INFO    ] 2022-09-22 09:47:20 | AdsListParser: read page 57\n",
-      "[INFO    ] 2022-09-22 09:47:24 | AdsListParser: read page 58\n",
-      "[INFO    ] 2022-09-22 09:47:28 | AdsListParser: read page 59\n",
-      "[INFO    ] 2022-09-22 09:47:32 | AdsListParser: read page 60\n",
-      "[INFO    ] 2022-09-22 09:47:36 | AdsListParser: read page 61\n",
-      "[INFO    ] 2022-09-22 09:47:39 | AdsListParser: read page 62\n",
-      "[INFO    ] 2022-09-22 09:47:42 | AdsListParser: read page 63\n",
-      "[INFO    ] 2022-09-22 09:47:45 | AdsListParser: read page 64\n",
-      "[INFO    ] 2022-09-22 09:47:50 | AdsListParser: read page 65\n",
-      "[INFO    ] 2022-09-22 09:47:53 | AdsListParser: read page 66\n",
-      "[INFO    ] 2022-09-22 09:47:56 | AdsListParser: read page 67\n",
-      "[INFO    ] 2022-09-22 09:47:59 | AdsListParser: read page 68\n",
-      "[INFO    ] 2022-09-22 09:48:02 | AdsListParser: read page 69\n",
-      "[INFO    ] 2022-09-22 09:48:06 | AdsListParser: read page 70\n",
-      "[INFO    ] 2022-09-22 09:48:09 | AdsListParser: read page 71\n",
-      "[INFO    ] 2022-09-22 09:48:13 | AdsListParser: read page 72\n",
-      "[INFO    ] 2022-09-22 09:48:17 | AdsListParser: read page 73\n",
-      "[INFO    ] 2022-09-22 09:48:19 | AdsListParser: read page 74\n",
-      "[INFO    ] 2022-09-22 09:48:24 | AdsListParser: read page 75\n",
-      "[INFO    ] 2022-09-22 09:48:29 | AdsListParser: read page 76\n",
-      "[INFO    ] 2022-09-22 09:48:32 | AdsListParser: read page 77\n",
-      "[INFO    ] 2022-09-22 09:48:34 | AdsListParser: read page 78\n",
-      "[INFO    ] 2022-09-22 09:48:34 | AdsListParser: last page detected\n",
-      "[INFO    ] 2022-09-22 09:48:34 | DownloaderSeleniumFirefox: close virtual browser\n",
-      "3867\n",
-      "CPU times: user 17.4 s, sys: 826 ms, total: 18.3 s\n",
-      "Wall time: 5min 6s\n"
+      "[INFO    ] 2022-09-26 11:14:26 | DownloaderSeleniumFirefox: downloader init\n",
+      "[INFO    ] 2022-09-26 11:14:26 | DownloaderSeleniumFirefox: open virtual browser\n",
+      "[INFO    ] 2022-09-26 11:14:29 | AdsListParser: downloader init\n",
+      "[INFO    ] 2022-09-26 11:14:29 | AvitoParser: init\n",
+      "[INFO    ] 2022-09-26 11:14:37 | AvitoParser: 76 pages for read\n",
+      "[INFO    ] 2022-09-26 11:14:37 | AdsListParser: start read and parse pages...\n",
+      "[INFO    ] 2022-09-26 11:14:41 | AdsListParser: read page 1\n",
+      "[INFO    ] 2022-09-26 11:14:47 | AdsListParser: read page 2\n",
+      "[INFO    ] 2022-09-26 11:14:52 | AdsListParser: read page 3\n",
+      "[INFO    ] 2022-09-26 11:14:57 | AdsListParser: read page 4\n",
+      "[INFO    ] 2022-09-26 11:15:02 | AdsListParser: read page 5\n",
+      "[INFO    ] 2022-09-26 11:15:08 | AdsListParser: read page 6\n",
+      "[INFO    ] 2022-09-26 11:15:15 | AdsListParser: read page 7\n",
+      "[INFO    ] 2022-09-26 11:15:21 | AdsListParser: read page 8\n",
+      "[INFO    ] 2022-09-26 11:15:25 | AdsListParser: read page 9\n",
+      "[INFO    ] 2022-09-26 11:15:32 | AdsListParser: read page 10\n",
+      "[INFO    ] 2022-09-26 11:15:37 | AdsListParser: read page 11\n",
+      "[INFO    ] 2022-09-26 11:15:43 | AdsListParser: read page 12\n",
+      "[INFO    ] 2022-09-26 11:15:49 | AdsListParser: read page 13\n",
+      "[INFO    ] 2022-09-26 11:15:52 | AdsListParser: read page 14\n",
+      "[INFO    ] 2022-09-26 11:15:56 | AdsListParser: read page 15\n",
+      "[INFO    ] 2022-09-26 11:16:00 | AdsListParser: read page 16\n",
+      "[INFO    ] 2022-09-26 11:16:06 | AdsListParser: read page 17\n",
+      "[INFO    ] 2022-09-26 11:16:10 | AdsListParser: read page 18\n",
+      "[INFO    ] 2022-09-26 11:16:15 | AdsListParser: read page 19\n",
+      "[INFO    ] 2022-09-26 11:16:19 | AdsListParser: read page 20\n",
+      "[INFO    ] 2022-09-26 11:16:25 | AdsListParser: read page 21\n",
+      "[INFO    ] 2022-09-26 11:16:31 | AdsListParser: read page 22\n",
+      "[INFO    ] 2022-09-26 11:16:35 | AdsListParser: read page 23\n",
+      "[INFO    ] 2022-09-26 11:16:39 | AdsListParser: read page 24\n",
+      "[INFO    ] 2022-09-26 11:16:43 | AdsListParser: read page 25\n",
+      "[INFO    ] 2022-09-26 11:16:47 | AdsListParser: read page 26\n",
+      "[INFO    ] 2022-09-26 11:16:51 | AdsListParser: read page 27\n",
+      "[INFO    ] 2022-09-26 11:16:56 | AdsListParser: read page 28\n",
+      "[INFO    ] 2022-09-26 11:17:01 | AdsListParser: read page 29\n",
+      "[INFO    ] 2022-09-26 11:17:05 | AdsListParser: read page 30\n",
+      "[INFO    ] 2022-09-26 11:17:08 | AdsListParser: read page 31\n",
+      "[INFO    ] 2022-09-26 11:17:13 | AdsListParser: read page 32\n",
+      "[INFO    ] 2022-09-26 11:17:16 | AdsListParser: read page 33\n",
+      "[INFO    ] 2022-09-26 11:17:20 | AdsListParser: read page 34\n",
+      "[INFO    ] 2022-09-26 11:17:26 | AdsListParser: read page 35\n",
+      "[INFO    ] 2022-09-26 11:17:31 | AdsListParser: read page 36\n",
+      "[INFO    ] 2022-09-26 11:17:35 | AdsListParser: read page 37\n",
+      "[INFO    ] 2022-09-26 11:17:38 | AdsListParser: read page 38\n",
+      "[INFO    ] 2022-09-26 11:17:42 | AdsListParser: read page 39\n",
+      "[INFO    ] 2022-09-26 11:17:46 | AdsListParser: read page 40\n",
+      "[INFO    ] 2022-09-26 11:17:49 | AdsListParser: read page 41\n",
+      "[INFO    ] 2022-09-26 11:17:52 | AdsListParser: read page 42\n",
+      "[INFO    ] 2022-09-26 11:17:55 | AdsListParser: read page 43\n",
+      "[INFO    ] 2022-09-26 11:18:00 | AdsListParser: read page 44\n",
+      "[INFO    ] 2022-09-26 11:18:04 | AdsListParser: read page 45\n",
+      "[INFO    ] 2022-09-26 11:18:08 | AdsListParser: read page 46\n",
+      "[INFO    ] 2022-09-26 11:18:14 | AdsListParser: read page 47\n",
+      "[INFO    ] 2022-09-26 11:18:19 | AdsListParser: read page 48\n",
+      "[INFO    ] 2022-09-26 11:18:26 | AdsListParser: read page 49\n",
+      "[INFO    ] 2022-09-26 11:18:29 | AdsListParser: read page 50\n",
+      "[INFO    ] 2022-09-26 11:18:33 | AdsListParser: read page 51\n",
+      "[INFO    ] 2022-09-26 11:18:38 | AdsListParser: read page 52\n",
+      "[INFO    ] 2022-09-26 11:18:42 | AdsListParser: read page 53\n",
+      "[INFO    ] 2022-09-26 11:18:46 | AdsListParser: read page 54\n",
+      "[INFO    ] 2022-09-26 11:18:52 | AdsListParser: read page 55\n",
+      "[INFO    ] 2022-09-26 11:18:55 | AdsListParser: read page 56\n",
+      "[INFO    ] 2022-09-26 11:18:58 | AdsListParser: read page 57\n",
+      "[INFO    ] 2022-09-26 11:19:01 | AdsListParser: read page 58\n",
+      "[INFO    ] 2022-09-26 11:19:12 | AdsListParser: read page 59\n",
+      "[INFO    ] 2022-09-26 11:19:16 | AdsListParser: read page 60\n",
+      "[INFO    ] 2022-09-26 11:19:20 | AdsListParser: read page 61\n",
+      "[INFO    ] 2022-09-26 11:19:24 | AdsListParser: read page 62\n",
+      "[INFO    ] 2022-09-26 11:19:29 | AdsListParser: read page 63\n",
+      "[INFO    ] 2022-09-26 11:19:32 | AdsListParser: read page 64\n",
+      "[INFO    ] 2022-09-26 11:19:35 | AdsListParser: read page 65\n",
+      "[INFO    ] 2022-09-26 11:19:38 | AdsListParser: read page 66\n",
+      "[INFO    ] 2022-09-26 11:19:42 | AdsListParser: read page 67\n",
+      "[INFO    ] 2022-09-26 11:19:45 | AdsListParser: read page 68\n",
+      "[INFO    ] 2022-09-26 11:19:48 | AdsListParser: read page 69\n",
+      "[INFO    ] 2022-09-26 11:19:54 | AdsListParser: read page 70\n",
+      "[INFO    ] 2022-09-26 11:19:58 | AdsListParser: read page 71\n",
+      "[INFO    ] 2022-09-26 11:20:01 | AdsListParser: read page 72\n",
+      "[INFO    ] 2022-09-26 11:20:05 | AdsListParser: read page 73\n",
+      "[INFO    ] 2022-09-26 11:20:10 | AdsListParser: read page 74\n",
+      "[INFO    ] 2022-09-26 11:20:13 | AdsListParser: read page 75\n",
+      "[INFO    ] 2022-09-26 11:20:16 | AdsListParser: read page 76\n",
+      "[INFO    ] 2022-09-26 11:20:16 | AdsListParser: last page detected\n",
+      "[INFO    ] 2022-09-26 11:20:17 | DownloaderSeleniumFirefox: close virtual browser\n",
+      "3796\n",
+      "CPU times: user 17.1 s, sys: 565 ms, total: 17.7 s\n",
+      "Wall time: 5min 51s\n"
      ]
     }
    ],
@@ -232,8 +230,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3867\n",
-      "3631\n"
+      "3796\n",
+      "3576\n"
      ]
     }
    ],
@@ -305,27 +303,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>352</th>\n",
-       "      <td>2580103074</td>\n",
-       "      <td>Объявление «3-к. квартира, 71 м², 7/9 эт.» 13 фотографий</td>\n",
-       "      <td>7500000</td>\n",
+       "      <th>222</th>\n",
+       "      <td>2534001900</td>\n",
+       "      <td>Объявление «1-к. квартира, 48 м², 8/10 эт.» 13 фотографий</td>\n",
+       "      <td>6500000</td>\n",
        "      <td></td>\n",
-       "      <td>пр-т Победы, 62</td>\n",
-       "      <td>Продаётся трёхкомнатная квартира на улице проспект Победы, 62. \\nОбщая площадь квартиры 71 м², жилая — 48 кв. М. И кухня — 8 кв. М. \\nВ квартире две лоджии. Комнаты все изолированы. Квартира расположена на седьмом этаже девятиэтажного дома. \\nКвартира светлая</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2022-09-22 09:48:34.368190</td>\n",
+       "      <td>ул. Комбрига Потапова, 31</td>\n",
+       "      <td>! Супер Цена! ЖК Архитектор.\\n\\nПродаю солнечную уютную 1 комнатную квартиру с шикарным видом на море из всех окон! + большая утеплённая лоджия (использовали её как полноценную жилую комнату). В квартире остаётся вся мебель и техника для комфортного проживан</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2022-09-26 11:20:17.001605</td>\n",
        "      <td>sevastopol</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>750</th>\n",
-       "      <td>2524469039</td>\n",
-       "      <td>Объявление «Квартира-студия, 24,1 м², 2/3 эт.» 2 фотографии</td>\n",
-       "      <td>1699000</td>\n",
+       "      <th>3490</th>\n",
+       "      <td>2456838563</td>\n",
+       "      <td>Объявление «2-к. квартира, 81 м², 3/8 эт.» 21 фотография</td>\n",
+       "      <td>12900000</td>\n",
        "      <td></td>\n",
-       "      <td>Волнистая ул., 30</td>\n",
-       "      <td>Продаю студию в самом лучшем районе города! \\nПрописка! Материнский капитал! \\nСтудия будет сдана в предчистовой отделке! \\nРядом вся необходимая инфраструктура! \\nВсе коммуникации городские! \\nЗвоните в любой день.</td>\n",
-       "      <td>16</td>\n",
-       "      <td>2022-09-22 09:48:34.368190</td>\n",
+       "      <td>ул. Тараса Шевченко, 49к2</td>\n",
+       "      <td>Двухкомнатная квартира 81 м2, на 3/8 этаже дома с просторной кухней 14 м2. Расположена в г. Севастополь, Гагаринский район, ул. Тараса Шевченко, д. 49/2. \\n\\nПозвоните нам, чтобы узнать все детали! \\n\\nТехнические характеристики: \\n— Адрес: г. Севастополь, Гага</td>\n",
+       "      <td>75</td>\n",
+       "      <td>2022-09-26 11:20:17.001605</td>\n",
        "      <td>sevastopol</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -333,21 +331,21 @@
        "</div>"
       ],
       "text/plain": [
-       "       avito_id                                                        title  \\\n",
-       "352  2580103074     Объявление «3-к. квартира, 71 м², 7/9 эт.» 13 фотографий   \n",
-       "750  2524469039  Объявление «Квартира-студия, 24,1 м², 2/3 эт.» 2 фотографии   \n",
+       "        avito_id                                                      title  \\\n",
+       "222   2534001900  Объявление «1-к. квартира, 48 м², 8/10 эт.» 13 фотографий   \n",
+       "3490  2456838563   Объявление «2-к. квартира, 81 м², 3/8 эт.» 21 фотография   \n",
        "\n",
-       "       price obj_name                adr  \\\n",
-       "352  7500000             пр-т Победы, 62   \n",
-       "750  1699000           Волнистая ул., 30   \n",
+       "         price obj_name                        adr  \\\n",
+       "222    6500000           ул. Комбрига Потапова, 31   \n",
+       "3490  12900000           ул. Тараса Шевченко, 49к2   \n",
        "\n",
-       "                                                                                                                                                                                                                                                             description  \\\n",
-       "352  Продаётся трёхкомнатная квартира на улице проспект Победы, 62. \\nОбщая площадь квартиры 71 м², жилая — 48 кв. М. И кухня — 8 кв. М. \\nВ квартире две лоджии. Комнаты все изолированы. Квартира расположена на седьмом этаже девятиэтажного дома. \\nКвартира светлая   \n",
-       "750                                              Продаю студию в самом лучшем районе города! \\nПрописка! Материнский капитал! \\nСтудия будет сдана в предчистовой отделке! \\nРядом вся необходимая инфраструктура! \\nВсе коммуникации городские! \\nЗвоните в любой день.   \n",
+       "                                                                                                                                                                                                                                                                description  \\\n",
+       "222      ! Супер Цена! ЖК Архитектор.\\n\\nПродаю солнечную уютную 1 комнатную квартиру с шикарным видом на море из всех окон! + большая утеплённая лоджия (использовали её как полноценную жилую комнату). В квартире остаётся вся мебель и техника для комфортного проживан   \n",
+       "3490  Двухкомнатная квартира 81 м2, на 3/8 этаже дома с просторной кухней 14 м2. Расположена в г. Севастополь, Гагаринский район, ул. Тараса Шевченко, д. 49/2. \\n\\nПозвоните нам, чтобы узнать все детали! \\n\\nТехнические характеристики: \\n— Адрес: г. Севастополь, Гага   \n",
        "\n",
-       "     page                         ts       place  \n",
-       "352     8 2022-09-22 09:48:34.368190  sevastopol  \n",
-       "750    16 2022-09-22 09:48:34.368190  sevastopol  "
+       "      page                         ts       place  \n",
+       "222      5 2022-09-26 11:20:17.001605  sevastopol  \n",
+       "3490    75 2022-09-26 11:20:17.001605  sevastopol  "
       ]
      },
      "execution_count": 10,
@@ -361,8 +359,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "fffa658b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install dash_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6edacf3c",
    "metadata": {},
    "outputs": [],
    "source": []
