--- a/01c-avito-downloader-house.ipynb
+++ b/01c-avito-downloader-house.ipynb
@@ -102,9 +102,9 @@
     "base_url = 'https://www.avito.ru/'\n",
     "# avito_path = 'sevastopol/kvartiry/prodam'\n",
     "\n",
-    "# place = 'sevastopol'\n",
+    "place = 'sevastopol'\n",
     "# place = 'bahchisaray'\n",
-    "place = 'sudak'\n",
+    "# place = 'sudak'\n",
     "\n",
     "avito_path = place+'/doma_dachi_kottedzhi/prodam'\n",
     "\n",
@@ -121,20 +121,62 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2022-09-26 11:22:38 | DownloaderSeleniumFirefox: downloader init\n",
-      "[INFO    ] 2022-09-26 11:22:38 | DownloaderSeleniumFirefox: open virtual browser\n",
-      "[INFO    ] 2022-09-26 11:22:40 | AdsListParser: downloader init\n",
-      "[INFO    ] 2022-09-26 11:22:40 | AvitoParser: init\n",
-      "[INFO    ] 2022-09-26 11:22:47 | AvitoParser: 3 pages for read\n",
-      "[INFO    ] 2022-09-26 11:22:47 | AdsListParser: start read and parse pages...\n",
-      "[INFO    ] 2022-09-26 11:22:54 | AdsListParser: read page 1\n",
-      "[INFO    ] 2022-09-26 11:22:58 | AdsListParser: read page 2\n",
-      "[INFO    ] 2022-09-26 11:23:01 | AdsListParser: read page 3\n",
-      "[INFO    ] 2022-09-26 11:23:01 | AdsListParser: last page detected\n",
-      "[INFO    ] 2022-09-26 11:23:01 | DownloaderSeleniumFirefox: close virtual browser\n",
-      "122\n",
-      "CPU times: user 1.37 s, sys: 174 ms, total: 1.55 s\n",
-      "Wall time: 23.7 s\n"
+      "[INFO    ] 2022-11-04 17:13:04 | DownloaderSeleniumFirefox: downloader init\n",
+      "[INFO    ] 2022-11-04 17:13:04 | DownloaderSeleniumFirefox: open virtual browser\n",
+      "[INFO    ] 2022-11-04 17:13:06 | AdsListParser: downloader init\n",
+      "[INFO    ] 2022-11-04 17:13:06 | AvitoParser: init\n",
+      "[INFO    ] 2022-11-04 17:13:13 | AvitoParser: 45 pages for read\n",
+      "[INFO    ] 2022-11-04 17:13:13 | AdsListParser: start read and parse pages...\n",
+      "[INFO    ] 2022-11-04 17:13:16 | AdsListParser: read page 1\n",
+      "[INFO    ] 2022-11-04 17:13:22 | AdsListParser: read page 2\n",
+      "[INFO    ] 2022-11-04 17:13:25 | AdsListParser: read page 3\n",
+      "[INFO    ] 2022-11-04 17:13:28 | AdsListParser: read page 4\n",
+      "[INFO    ] 2022-11-04 17:13:31 | AdsListParser: read page 5\n",
+      "[INFO    ] 2022-11-04 17:13:35 | AdsListParser: read page 6\n",
+      "[INFO    ] 2022-11-04 17:13:38 | AdsListParser: read page 7\n",
+      "[INFO    ] 2022-11-04 17:13:42 | AdsListParser: read page 8\n",
+      "[INFO    ] 2022-11-04 17:13:47 | AdsListParser: read page 9\n",
+      "[INFO    ] 2022-11-04 17:13:51 | AdsListParser: read page 10\n",
+      "[INFO    ] 2022-11-04 17:13:55 | AdsListParser: read page 11\n",
+      "[INFO    ] 2022-11-04 17:13:58 | AdsListParser: read page 12\n",
+      "[INFO    ] 2022-11-04 17:14:01 | AdsListParser: read page 13\n",
+      "[INFO    ] 2022-11-04 17:14:04 | AdsListParser: read page 14\n",
+      "[INFO    ] 2022-11-04 17:14:09 | AdsListParser: read page 15\n",
+      "[INFO    ] 2022-11-04 17:14:12 | AdsListParser: read page 16\n",
+      "[INFO    ] 2022-11-04 17:14:15 | AdsListParser: read page 17\n",
+      "[INFO    ] 2022-11-04 17:14:19 | AdsListParser: read page 18\n",
+      "[INFO    ] 2022-11-04 17:14:23 | AdsListParser: read page 19\n",
+      "[INFO    ] 2022-11-04 17:14:26 | AdsListParser: read page 20\n",
+      "[INFO    ] 2022-11-04 17:14:32 | AdsListParser: read page 21\n",
+      "[INFO    ] 2022-11-04 17:14:35 | AdsListParser: read page 22\n",
+      "[INFO    ] 2022-11-04 17:14:38 | AdsListParser: read page 23\n",
+      "[INFO    ] 2022-11-04 17:14:44 | AdsListParser: read page 24\n",
+      "[INFO    ] 2022-11-04 17:14:48 | AdsListParser: read page 25\n",
+      "[INFO    ] 2022-11-04 17:14:51 | AdsListParser: read page 26\n",
+      "[INFO    ] 2022-11-04 17:14:56 | AdsListParser: read page 27\n",
+      "[INFO    ] 2022-11-04 17:14:59 | AdsListParser: read page 28\n",
+      "[INFO    ] 2022-11-04 17:15:02 | AdsListParser: read page 29\n",
+      "[INFO    ] 2022-11-04 17:15:04 | AdsListParser: read page 30\n",
+      "[INFO    ] 2022-11-04 17:15:06 | AdsListParser: read page 31\n",
+      "[INFO    ] 2022-11-04 17:15:09 | AdsListParser: read page 32\n",
+      "[INFO    ] 2022-11-04 17:15:11 | AdsListParser: read page 33\n",
+      "[INFO    ] 2022-11-04 17:15:13 | AdsListParser: read page 34\n",
+      "[INFO    ] 2022-11-04 17:15:15 | AdsListParser: read page 35\n",
+      "[INFO    ] 2022-11-04 17:15:18 | AdsListParser: read page 36\n",
+      "[INFO    ] 2022-11-04 17:15:21 | AdsListParser: read page 37\n",
+      "[INFO    ] 2022-11-04 17:15:26 | AdsListParser: read page 38\n",
+      "[INFO    ] 2022-11-04 17:15:29 | AdsListParser: read page 39\n",
+      "[INFO    ] 2022-11-04 17:15:31 | AdsListParser: read page 40\n",
+      "[INFO    ] 2022-11-04 17:15:35 | AdsListParser: read page 41\n",
+      "[INFO    ] 2022-11-04 17:15:38 | AdsListParser: read page 42\n",
+      "[INFO    ] 2022-11-04 17:15:40 | AdsListParser: read page 43\n",
+      "[INFO    ] 2022-11-04 17:15:42 | AdsListParser: read page 44\n",
+      "[INFO    ] 2022-11-04 17:15:44 | AdsListParser: read page 45\n",
+      "[INFO    ] 2022-11-04 17:15:44 | AdsListParser: last page detected\n",
+      "[INFO    ] 2022-11-04 17:15:45 | DownloaderSeleniumFirefox: close virtual browser\n",
+      "2234\n",
+      "CPU times: user 9.74 s, sys: 502 ms, total: 10.2 s\n",
+      "Wall time: 2min 41s\n"
      ]
     }
    ],
@@ -162,8 +204,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "122\n",
-      "122\n"
+      "2234\n",
+      "2146\n"
      ]
     }
    ],
@@ -212,51 +254,47 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>2318367244</td>\n",
-       "      <td>Объявление «Дом 60,5 м² на участке 6 сот.» 40 фотографий</td>\n",
-       "      <td>4200000</td>\n",
+       "      <th>792</th>\n",
+       "      <td>2482038351</td>\n",
+       "      <td>Объявление «Дом 129,6 м² на участке 4,1 сот.» 19 фотографий</td>\n",
+       "      <td>10800000</td>\n",
        "      <td></td>\n",
-       "      <td>с. Миндальное, СНТ Солнечная Долина, Арбатская ул., 17</td>\n",
-       "      <td>Бархатный Сезон- Море +24… Предлагаю вам стать владельцем(Не Агентство- не могу поменять) современного Домика в Крыму (по стоимости 1к. Кв) в пригороде прекрасного курортного г. Судак, в с. Миндальное. Домик Новый (въехали в июне 2021г.) 60,5 кв. М.-по док</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2022-09-26 11:23:01.176417</td>\n",
+       "      <td>ТСН Союз, 49</td>\n",
+       "      <td>Арт. 31425154. \\n\\nДом расположен в тихом и уютном месте. Не далеко от дома есть детская игровая площадка, огороженная. \\n\\nВсе коммуникации подключены: электричество-3 фазы, вода- городская круглогодичная, канализация-септик. \\n\\nХарактеристики: \\n\\nОбщая площадь</td>\n",
+       "      <td>17</td>\n",
+       "      <td>2022-11-04 17:15:44.834740</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>114</th>\n",
-       "      <td>2405525781</td>\n",
-       "      <td>Объявление «Дом 223 м² на участке 6 сот.» 6 фотографий</td>\n",
-       "      <td>23000000</td>\n",
+       "      <th>1432</th>\n",
+       "      <td>1605601891</td>\n",
+       "      <td>Объявление «Дом 300 м² на участке 4 сот.» 13 фотографий</td>\n",
+       "      <td>22990000</td>\n",
        "      <td></td>\n",
-       "      <td>ул. Мамеди, 28</td>\n",
-       "      <td>Продаётся дом, на 6 сотках в солнечном городе Судак с уникальным климатом. Дом построен в тихом месте в 250 м от городской транспортной остановки, в 2 км до моря. Удобная транспортная развязка с выездом в Симферополь, мыс Меганом, Алушта. Дом капитального</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2022-09-26 11:23:01.176417</td>\n",
+       "      <td>мыс Фиолент</td>\n",
+       "      <td>Римская вилла у Черного моря.\\n\\nПродается 3х этажная вилла площадью 300 кв м в римском стиле в элитном котеджном поселке на Фиоленте в районе Автобата. 1 этаж- кухня-столовая 30 кв м, жилая комната, санузел, оснащенный современной сантехникой, джакузи. 2 эт</td>\n",
+       "      <td>30</td>\n",
+       "      <td>2022-11-04 17:15:44.834740</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       avito_id                                                     title  \\\n",
-       "49   2318367244  Объявление «Дом 60,5 м² на участке 6 сот.» 40 фотографий   \n",
-       "114  2405525781    Объявление «Дом 223 м² на участке 6 сот.» 6 фотографий   \n",
+       "        avito_id                                                        title  \\\n",
+       "792   2482038351  Объявление «Дом 129,6 м² на участке 4,1 сот.» 19 фотографий   \n",
+       "1432  1605601891      Объявление «Дом 300 м² на участке 4 сот.» 13 фотографий   \n",
        "\n",
-       "        price obj_name  \\\n",
-       "49    4200000            \n",
-       "114  23000000            \n",
+       "         price obj_name           adr  \\\n",
+       "792   10800000           ТСН Союз, 49   \n",
+       "1432  22990000            мыс Фиолент   \n",
        "\n",
-       "                                                        adr  \\\n",
-       "49   с. Миндальное, СНТ Солнечная Долина, Арбатская ул., 17   \n",
-       "114                                          ул. Мамеди, 28   \n",
+       "                                                                                                                                                                                                                                                                   description  \\\n",
+       "792   Арт. 31425154. \\n\\nДом расположен в тихом и уютном месте. Не далеко от дома есть детская игровая площадка, огороженная. \\n\\nВсе коммуникации подключены: электричество-3 фазы, вода- городская круглогодичная, канализация-септик. \\n\\nХарактеристики: \\n\\nОбщая площадь   \n",
+       "1432        Римская вилла у Черного моря.\\n\\nПродается 3х этажная вилла площадью 300 кв м в римском стиле в элитном котеджном поселке на Фиоленте в районе Автобата. 1 этаж- кухня-столовая 30 кв м, жилая комната, санузел, оснащенный современной сантехникой, джакузи. 2 эт   \n",
        "\n",
-       "                                                                                                                                                                                                                                                          description  \\\n",
-       "49   Бархатный Сезон- Море +24… Предлагаю вам стать владельцем(Не Агентство- не могу поменять) современного Домика в Крыму (по стоимости 1к. Кв) в пригороде прекрасного курортного г. Судак, в с. Миндальное. Домик Новый (въехали в июне 2021г.) 60,5 кв. М.-по док   \n",
-       "114  Продаётся дом, на 6 сотках в солнечном городе Судак с уникальным климатом. Дом построен в тихом месте в 250 м от городской транспортной остановки, в 2 км до моря. Удобная транспортная развязка с выездом в Симферополь, мыс Меганом, Алушта. Дом капитального    \n",
-       "\n",
-       "     page                         ts  \n",
-       "49      1 2022-09-26 11:23:01.176417  \n",
-       "114     3 2022-09-26 11:23:01.176417  "
+       "      page                         ts  \n",
+       "792     17 2022-11-04 17:15:44.834740  \n",
+       "1432    30 2022-11-04 17:15:44.834740  "
       ]
      },
      "execution_count": 8,
@@ -307,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.8"
   },
   "toc": {
    "base_numbering": 1,
